# wiki-term-translator

./: Cargo.toml  README.md
src/: main.rs
