[package]
name = "wiki-term-translator"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.2", features = ["derive"] }
color-eyre = "0.6.5"
futures-io = "0.3.33"
isolang = "2.4.0"
reqwest = { version = "0.13.4", features = ["json", "blocking"] }
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.150"
